--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "incremental": true,
+    "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
     "skipLibCheck": true,
     "target": "es2017",
     "lib": ["esnext", "dom"],
@@ -28,5 +30,6 @@
   },
   "compileOnSave": false,
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [{ "path": "../dep" }]
 }
