--- a/apps/main-app/package.json
+++ b/apps/main-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-side-effects-bug",
+  "name": "main-app",
   "version": "1.0.2",
   "main": "dist/main.js",
   "typings": "dist/lib/index.d.ts",
@@ -9,10 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/creditiq/webpack-side-effects-bug"
+    "url": "https://github.com/creditiq/simple-repros"
   },
   "dependencies": {
-    "webpack-side-effects-bug-dep": "file:../dep"
+    "webpack-side-effects-bug-dep": "workspace:*",
+    "compile-perf-dep": "workspace:*"
   },
   "peerDependencies": {},
   "devDependencies": {
