--- a/apps/main-app/package.json
+++ b/apps/main-app/package.json
@@ -17,31 +17,31 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@rushstack/heft": "^0.26.0",
-    "autoprefixer": "^8.6.5",
-    "css-loader": "^0.28.11",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "ejs-compiled-loader": "~1.1.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
+    "@rushstack/heft": "^0.28.1",
+    "@rushstack/heft-webpack5-plugin": "^0.1.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^0.4.0",
+    "typescript": "^4.2.3",
+    "autoprefixer": "^8.6.5",
     "node-sass": "^4.9.4",
+    "css-loader": "^5.2.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "ejs-compiled-loader": "^3.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.4.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^2.1.6",
-    "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^6.0.7",
-    "source-map-loader": "^0.2.4",
-    "speed-measure-webpack-plugin": "~1.4.2",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^8.1.0",
-    "typescript": "^4.2.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.46.0",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^11.0.0",
+    "source-map-loader": "^2.0.1",
+    "speed-measure-webpack-plugin": "~1.5.0",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "util": "0.12.3",
+    "process": "0.11.10",
+    "webpack": "^5.31.0"
   },
   "engines": {
     "node": ">=6.10.x"
