--- a/#nested/package.json
+++ b/#nested/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack build"
+    "build": "webpack build",
+    "build:debug": "node --inspect-brk ./node_modules/.bin/webpack build"
   },
   "repository": {
     "type": "git",
@@ -13,7 +14,7 @@
   "peerDependencies": {},
   "devDependencies": {
     "resolve-url-loader": "^3.1.2",
-    "webpack": "^5.31.0",
+    "webpack": "file:../../../scamden/webpack",
     "webpack-cli": "^4.6.0"
   },
   "description": "placeholder",
