--- a/apps/main-app/tsconfig.json
+++ b/apps/main-app/tsconfig.json
@@ -1,31 +1,5 @@
 {
-  "compilerOptions": {
-    "skipLibCheck": true,
-    "target": "es2017",
-    "lib": ["esnext", "dom"],
-    "outDir": "dist",
-    "rootDir": "src",
-    "rootDirs": ["src", "temp/sass-ts"],
-    "module": "esnext",
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "declaration": true,
-    "declarationMap": true,
-    "removeComments": true,
-    "inlineSources": true,
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "resolveJsonModule": true,
-    "jsx": "react",
-    "plugins": [],
-    "types": []
-  },
-  "compileOnSave": false,
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
+  "extends": "./node_modules/rig-rig-test/profiles/web-app/tsconfig-app.json",
   "references": [
     {
       "path": "../../libraries/compile-perf-dep"
